# rust-oauth2-admin-api

./: Cargo.toml  wrangler.toml
src/: lib.rs
src/handlers/: create_client.rs  delete_client.rs  get_client.rs  list_clients.rs  mod.rs  update_client.rs
src/models/: client.rs
src/openapi/: clients.rs
