[package]
name = "rust-oauth2-admin-api"
version = "0.1.0"
edition = "2021"
authors = ["davidrhoderick <david.e.rhoderick@gmail.com>"]

[package.metadata.release]
release = false

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version = "0.5.0" }
worker-macros = { version = "0.5.0" }
axum  = { version = "0.7", default-features = false }
tower-service = "0.3.2"
console_error_panic_hook = { version = "0.1.1" }
rand = "0.8.5"
utoipa = "5.2.0"
serde_json = "1.0.133"
serde = "1.0.216"
url = "2.5.4"
getrandom = { version = "0.2", features = ["js"] }
utoipa-swagger-ui = "8.0.3"

[dependencies.uuid]
version = "1.11.0"
features = [
    "v4",
    "fast-rng",
]
